# mc

./: .dir-locals.el  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.org  fast_maxclique.cpp  fast_maxclique.hpp  foo  input.tar.bz2  k-core.cpp  mc.cpp  mc.hpp  mc.tex  schedule.cpp  test.sh
drafts/: CMakeLists.txt  classes.cpp  default_args.cpp  foo.cpp  iter.cpp  k-core.cpp  k-core2.cpp  max_clique.cpp  native_handler.cpp  pmr.cpp  profiler.h  pruning.cpp  read.cpp  rvalue.cpp  tmp.cpp  tmp2.cpp
include/: algorithm.hpp  graph.hpp  max_clique.hpp  reader.hpp  utils.hpp
src/: algorithm.cpp  graph.cpp  main.cpp  max_clique.cpp  naive.cpp  reader.cpp
src/algorithms/: fahle.cpp
